# monado-playspectra

./: .cmake-format.py  .gitignore  .gitlab-ci.yml  CMakeLists.txt
.gitlab-ci/templates/: .gitlab-ci.yml.jinja
cmake/: GenerateOpenXRRuntimeManifest.cmake  GenerateOpenXRRuntimeManifest.cmake.in  MonadoSetOptions.cmake  generate_openxr_runtime_manifest.py
doc/: cpp-glue-wrappers.md  mainpage.md  mingwbuild.md
doc/changes/auxiliary/: mr.2932.md
doc/changes/compositor/: mr.2883.md  mr.2932.md
doc/changes/state_trackers/: mr.2894.md
doc/changes/xrt/: mr.2864.md  mr.2869.md
examples/minimal/: CMakeLists.txt
examples/minimal/src/: main.c
scripts/: format-cmake.sh  format-project.sh  mapping.imp
src/xrt/auxiliary/glue/: g_device.hpp  g_hand_tracker.hpp  g_traits.hpp
src/xrt/auxiliary/math/: m_clock_tracking.c  m_relation_history.cpp  m_relation_history.h
src/xrt/auxiliary/render/: render_compute.c  render_gfx.c  render_interface.h  render_resources.c
src/xrt/auxiliary/render/shaders/: layer.comp
src/xrt/auxiliary/tracking/: t_calibration.cpp
src/xrt/auxiliary/util/: CMakeLists.txt  u_builder_search.c  u_config_json.c  u_device.c  u_device_id.c  u_device_id.h  u_frame_scribble.cpp  u_frame_scribble.h  u_pacing.h  u_pacing_compositor.c  u_prober.c  u_str_to_enum.c  u_str_to_enum.h  u_system_devices.c  u_system_devices.h  u_system_devices_ni.c  u_system_devices_ni.h  u_var.h
src/xrt/auxiliary/vk/: vk_bundle_init.c  vk_cmd.c  vk_cmd.h  vk_generate_inc_files.py  vk_helpers.h  vk_print.c  vk_surface_info.c  vk_surface_info.h  vk_time.c
src/xrt/base/: CMakeLists.txt  b_hand_tracker.cpp  b_hand_tracker.h  b_hand_tracker.hpp  b_session.c  b_space_overseer.c  b_system.c  b_system_devices.c
src/xrt/compositor/client/: comp_vk_client.c  comp_vk_client.h
src/xrt/compositor/main/: comp_compositor.c  comp_renderer.c  comp_settings.c  comp_target.h  comp_target_swapchain.c  comp_target_swapchain.h  comp_window_peek.c
src/xrt/compositor/null/: null_compositor.c
src/xrt/compositor/render/: render_distortion.c  render_interface.h  render_resources.c
src/xrt/compositor/shaders/: CMakeLists.txt  blit.inc.glsl  blit_ms.comp  distortion.comp  render_shaders.c  render_shaders_interface.h
src/xrt/compositor/util/: comp_high_level_render.c  comp_high_level_render.h  comp_render.h  comp_render_cs.c  comp_render_helpers.h  comp_swapchain.c  comp_vulkan.c
src/xrt/drivers/: CMakeLists.txt
src/xrt/drivers/contactglove/: contactglove.c
src/xrt/drivers/multi_wrapper/: multi.c
src/xrt/drivers/playspectra/: playspectra_control.c  playspectra_controller.c  playspectra_hmd.c  playspectra_interface.h  playspectra_proto.c  playspectra_proto.h  playspectra_proto_test.c  playspectra_state.c  playspectra_state.h
src/xrt/drivers/pssense/: pssense_driver.c  pssense_interface.h  pssense_protocol.h
src/xrt/drivers/remote/: r_hub.c
src/xrt/drivers/rift/: rift_driver.c  rift_internal.h
src/xrt/drivers/steamvr_lh/: device.cpp  device.hpp  steamvr_lh.cpp
src/xrt/drivers/steamvr_lh/interfaces/: context.hpp
src/xrt/include/tracking/: t_constellation.h
src/xrt/include/xrt/: xrt_compiler.h  xrt_compositor.h  xrt_config_build.h.cmake_in  xrt_defines.h  xrt_device.h  xrt_hand_tracker.h  xrt_prober.h  xrt_system.h
src/xrt/ipc/: CMakeLists.txt
src/xrt/ipc/client/: ipc_client_hand_tracker.c  ipc_client_hand_tracker.h  ipc_client_system_devices.c  ipc_client_xdev.c  ipc_client_xdev.h
src/xrt/ipc/server/: ipc_server.h  ipc_server_handler.c  ipc_server_handler_hand_tracker.c  ipc_server_objects.c  ipc_server_objects.h  ipc_server_per_client_thread.c  ipc_server_process.c
src/xrt/ipc/shared/: ipc_protocol.h
src/xrt/ipc/shared/proto/: 50-hand-tracker.json  50-hand-tracker.json.license
src/xrt/state_trackers/gui/: CMakeLists.txt  gui_common.h  gui_scene_constellation_tracker_test.cpp  gui_scene_debug.c  gui_scene_main_menu.c
src/xrt/state_trackers/openvr/: CMakeLists.txt  openvr_devices.cpp  openvr_devices.hpp  openvr_events.cpp  openvr_events.hpp  openvr_negotiate.cpp
src/xrt/state_trackers/openvr/compositor/: openvr_compositor.cpp  openvr_compositor.hpp  openvr_compositor_vulkan.cpp
src/xrt/state_trackers/openvr/interfaces/: XRTVRCompositor.cpp  XRTVRSystem.cpp
src/xrt/state_trackers/oxr/: CMakeLists.txt  oxr_api_hand_tracking.c  oxr_api_verify.h  oxr_conversions.h  oxr_hand_tracking.c  oxr_hand_tracking.h  oxr_instance.c  oxr_objects.h  oxr_session.c  oxr_session_frame_end.c  oxr_system.c  oxr_verify.c  oxr_xdev.c
src/xrt/state_trackers/oxr/actions/: oxr_api_action.c  oxr_binding.c  oxr_input.c  oxr_instance_path_cache.c  oxr_interaction_profile_array.c
src/xrt/state_trackers/oxr/bindings/: oxr_bindings.py  oxr_generated_bindings.c.template  oxr_generated_bindings.h.template
src/xrt/state_trackers/oxr/common/: oxr_handle_array.c  oxr_handle_array.h  oxr_handle_base.c
src/xrt/state_trackers/oxr/extension_support/: oxr_extension_support.py
src/xrt/state_trackers/prober/: p_prober.c
src/xrt/state_trackers/steamvr_drv/: CMakeLists.txt
src/xrt/targets/common/: CMakeLists.txt  target_builder_interface.h  target_builder_playspectra.c  target_builder_psvr2.c  target_builder_rift.c  target_lists.c
src/xrt/targets/openvr/: CMakeLists.txt  libopenvr.def  libopenvr.version
src/xrt/targets/openxr/: CMakeLists.txt
src/xrt/targets/sdl_test/: sdl_compositor.c  sdl_device.c  sdl_instance.c
src/xrt/tracking/constellation/: CMakeLists.txt  constellation_debug_scribble.cpp  constellation_tracker_rerun.cpp  constellation_tracker_rerun.hpp  constellation_tracker_rerun_blobwatch.h  correspondence_search.c  led_search_model.c  pose_metrics.c  pose_metrics.h  pose_optimize.cpp  t_constellation_tracker.cpp  t_constellation_tracker.h  t_constellation_tracker_internal.hpp  t_led_sync_refinement.c  t_led_sync_refinement.h  t_rift_blobwatch.c  t_rift_blobwatch.h
tests/: CMakeLists.txt  tests_cxx_wrappers.cpp  tests_glue_traits.cpp  tests_pacing.cpp
